package app.controller;

public class ImportTestsController {
    Company company;

    public ImportTestsController(){
        this.company = App.getInstance().getCompany();
    }

    public void importFrom( String path ){

    }


}
